# ragestudos

./: .env.example  .gitignore  ROADMAP_PRECISION.txt  comandos_para_rodar.txt  demo_juridico_plano.txt  hermes_student_roadmap.txt  plano.txt  populate_legal_demo.py  pyproject.toml  requirements.txt  requirements_full.txt  run_servers.sh  scratch_roadmap.md  stop_servers.sh  telegram_bot.py  test_external_api.py  test_external_full.py  test_query_legal.py
backend/: history.py  main.py  observability.py  resilience.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/Chat/: ChatInterface.tsx
frontend/src/components/Navigation/: ChatHistory.tsx  SidebarMenu.tsx
frontend/src/components/Settings/: SettingsModal.tsx
frontend/src/lib/: api.ts
scratch/: check_config.py  check_openai_models.py  list_models.py  list_models_new.py  test_async_thread.py  test_embedding_creation.py  test_llm.py
src/: __init__.py  audio_processor.py  config.py  document_loader.py  rag_engine.py  services.py
src/models/: legal_process.py
src/services_ext/: external_api.py
src/utils/: task_manager.py
