[project]
name = "rag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "llama-index>=0.14.20",
    "llama-index-embeddings-google-genai>=0.5.0",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-google-genai>=0.9.1",
    "llama-index-llms-openai>=0.7.5",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-parse>=0.6.94",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "tokenizers<=0.23.0",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "httpx",
    "llama-index-readers-docling",
    "docling",
    "openai-whisper",
    "pydub",
]
